force-app/main/default/objects/Case/fields/First_Response_Time__c.field-meta.xml
<CustomField>
    <fullName>First_Response_Time__c</fullName>
    <description>최초 응답 시각</description>
    <label>First Response Time</label>
    <type>DateTime</type>
</CustomField>