force-app/main/default/objects/Case/fields/Related_Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Related_Work_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>이 문의가 전환되어 생성된(또는 연결된) 작업 지시</description>
    <label>Related Work Order</label>
    <referenceTo>Work_Order__c</referenceTo>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>