force-app/main/default/objects/Case/fields/Requires_Field_Visit__c.field-meta.xml
<CustomField>
    <fullName>Requires_Field_Visit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>현장 방문이 필요한 문의인지 여부. 체크되면 Work Order로 전환된다.</description>
    <label>Requires Field Visit</label>
    <type>Checkbox</type>
</CustomField>