force-app/main/default/objects/Case/fields/Service_Contract__c.field-meta.xml
<CustomField>
    <fullName>Service_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>SLA 적용 기준이 되는 서비스 계약</description>
    <label>Service Contract</label>
    <referenceTo>Service_Contract__c</referenceTo>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>