force-app/main/default/objects/Case/fields/SLA_Breached__c.field-meta.xml
<CustomField>
    <fullName>SLA_Breached__c</fullName>
    <defaultValue>false</defaultValue>
    <description>연결된 서비스 계약의 SLA 기준을 초과했는지 여부</description>
    <label>SLA Breached</label>
    <type>Checkbox</type>
</CustomField>